--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.1",
   "homepage": "https://github.com/e10/example-mean",
   "description": "Example for MeanJS",
-  "main": "app.js",
+  "private": true,
+  "scripts": {
+    "start": "node app"
+  },
   "author": {
     "name": "Anuj Pandey",
     "email": "a@e10.in",
@@ -14,11 +17,15 @@
     "checksum": "^0.1.1",
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
+    "errorhandler": "^1.3.2",
     "express": "^4.10.4",
+    "express-session": "^1.10.0",
     "jade": "~1.6.0",
+    "method-override": "^2.3.1",
     "mime": "^1.2.11",
     "mongoose": "^3.8.21",
-    "morgan": "~1.3.0",
+    "morgan": "^1.3.2",
+    "multer": "^0.1.6",
     "q": "^1.1.2",
     "serve-favicon": "^2.2.0",
     "vash": "^0.7.12-1"
